--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ header {
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #e0e0e0;
-    background-color: #f7df77;
+    background-color: #fff352;
     width: 100%;
     position: relative;
 }
