--- a/css/projects.css
+++ b/css/projects.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-color: #f7df77;
+    background-color: #fff352;
     color: #333;
     line-height: 1.6;
 }
@@ -20,7 +20,7 @@ header {
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #e0e0e0;
-    background-color: #f7df77;
+    background-color: #fff352;
     width: 100%;
     position: relative;
 }
