--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ nav ul li a:hover {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: #ffee44; /* 黄色背景 */
+  background: #fff352; /* 黄色背景 */
   display: flex;
   justify-content: center;
   align-items: center;
