--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@
     padding: 15px 0;
     margin-top: 50px;
     background-color: #ffffff; /* 黄色背景 */
-    color: #333; /* 黒文字 */
+    color: #3f4691; /* 黒文字 */
     font-size: 12px; /* 小さいフォント */
     border-top: 1px solid #e0e0e0; /* 上部に細い境界線 */
 }
