--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ nav ul li a:hover {
 
 .title-text {
     font-size: 20px;
-    font-weight: normal;
+    font-weight: bold;
 }
 
 /* メディアクエリの改善 */
