--- a/css/projects.css
+++ b/css/projects.css
@@ -225,27 +225,27 @@ nav ul li a:hover {
 
 /* タグ別カラー設定 */
 .project-card[data-tags*="Design"] .project-square {
-    background-color: #f7eb84; /* 赤系 */
+    background-color: #004389; /* 赤系 */
 }
 
 .project-card[data-tags*="Research"] .project-square {
-    background-color: #e8cf89; /* 青系 */
+    background-color: #006284; /* 青系 */
 }
 
 .project-card[data-tags*="Thesis"] .project-square {
-    background-color: #f2e9aa; /* 緑系 */
+    background-color: #314263; /* 緑系 */
 }
 
 .project-card[data-tags*="Reading"] .project-square {
-    background-color: #e8d9ba; /* オレンジ系 */
+    background-color: #3b6384; /* オレンジ系 */
 }
 
 .project-card[data-tags*="Publication"] .project-square {
-    background-color: #efeac5; /* 紫系 */
+    background-color: #514f8e; /* 紫系 */
 }
 
 .project-card[data-tags*="Event"] .project-square {
-    background-color: #ede4c5; /* 黄系 */
+    background-color: #0b79ab; /* 黄系 */
 }
 
 
@@ -272,7 +272,7 @@ nav ul li a:hover {
     position: absolute;
     bottom: 5px;
     left: 10%; /* 画像コンテナと同じ左オフセット */
-    color: #000; /* 文字色を黒に */
+    color: #ffffff; /* 文字色を白に */
 }
 
 /* プロジェクトタイトル - 太字 */
